--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,9 +20,9 @@ header {
 }
 
 footer {
-    position: absolute;
-    width: 100%;
-    left: 0;
+    width: 920px;
+    margin-left: auto;
+    margin-right: auto;
     bottom: 0;
     box-sizing: border-box;
     min-width: 80px;
@@ -43,28 +43,41 @@ footer {
 
 .control {
     display: inline-block;
-    margin: 2px;
+    margin-left: 20px;
+    margin-right: 20px;
     width: 80px;
     height: 40px;
 }
 
+#flex-container {
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+}
 
+#flex-container div {
+    margin: 20px;
+}
 
 .player {
     background-color: rgb(193, 250, 188);
     float: left;
-    width: 40%;
+    width: 300px;
+    height: 300px;
 }
 
 .computer {
     background-color: rgb(157, 251, 251);
-    float: right;
-    width: 40%;
+    width: 300px;
+    height: 300px;
 }
 
-.container {
-    background-color: white;
-    width: 100%;
+#image-container {
+    background-color: white;    
+    width: 300px;
+    height: 300px;
+    padding-top: 30px;
 }
 
 img {
@@ -72,12 +85,9 @@ img {
     max-height: 100%;
 }
 
-header h2 {
-    margin: -5px;
-    padding-bottom: -25px; 
+#makechoice-heading p {
+    margin-top: 20px;
 }
 
-footer p {
-    margin: -5px;
-}
+
 
