Add some js basic

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,21 +17,11 @@ body {
 header {
     text-align: center;
     height: 50px;
+    margin-bottom: 20px;
+    letter-spacing: 5px;
 }
 
-footer {
-    width: 920px;
-    margin-left: auto;
-    margin-right: auto;
-    bottom: 0;
-    box-sizing: border-box;
-    min-width: 80px;
-    text-align: center;
-    color: rgb(145, 5, 5);
-    background-color: bisque;
-    padding-top: 3px;
-    padding-bottom: 4px;
-}
+
 
 .game-area {
     width: 75%;
@@ -80,13 +70,52 @@ footer {
     padding-top: 30px;
 }
 
-img {
+#image-container img {
     max-width: 100%;
     max-height: 100%;
 }
 
 #makechoice-heading p {
     margin-top: 20px;
+}
+
+#choices {
+    width: 400px;
+    height: 80px;
+    background-color: rgb(221, 197, 244);
+    width: 96%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#choices img {
+    width: 80px;
+    height: 80px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+footer {
+    position: relative;
+    width: 72%;
+    margin-left: auto;
+    margin-right: auto;
+    top: 20px;
+    bottom: 0;
+    box-sizing: border-box;
+    min-width: 80px;
+    text-align: center;
+    color: rgb(145, 5, 5);
+    background-color: bisque;
+    padding-top: 3px;
+    padding-bottom: 4px;
+}
+
+footer h4 {
+    margin: -1px;
+}
+footer p {
+    margin: -1px;
 }
 
 
