--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ header {
     text-align: center;
     height: 50px;
     margin-bottom: 20px;
-    letter-spacing: 5px;
+    letter-spacing: 10px;
 }
 
 
@@ -31,13 +31,6 @@ header {
     text-align: center;
 }
 
-.control {
-    display: inline-block;
-    margin-left: 20px;
-    margin-right: 20px;
-    width: 80px;
-    height: 40px;
-}
 
 #flex-container {
     display: flex;
@@ -57,11 +50,21 @@ header {
     height: 300px;
 }
 
+#your-choice {
+    width: 80%;
+}
+
+
+
 .computer {
     background-color: rgb(157, 251, 251);
     width: 24%;
     height: 300px;
 }
+#opponent-choice {
+    width: 80%; 
+}
+
 
 #image-container {
     background-color: white;    
@@ -80,9 +83,13 @@ header {
     margin-top: 20px;
 }
 
-#choices {
-    
-    height: 80px;
+#makeChoice {
+    margin-top: -25px;
+    font-size:xx-large ;
+    letter-spacing: 5px;
+}
+
+#choices {    
     background-color: rgb(221, 197, 244);
     width: 85%;
     margin-left: auto;
@@ -101,8 +108,7 @@ footer {
     width: 64%;
     margin-left: auto;
     margin-right: auto;
-    top: 20px;
-    bottom: 0;
+    top: 20px;    
     box-sizing: border-box;
     min-width: 80px;
     text-align: center;
@@ -117,14 +123,6 @@ footer h4 {
 }
 footer p {
     margin: -1px;
-}
-
-#your-choice {
-    width: 100%;
-}
-
-#opponent-choice {
-    width: 100%; 
 }
 
 
