Change responsive design to player and computer box

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,13 @@ header {
     background-color: rgb(193, 250, 188);
     float: left;
     width: 24%;
-    height: 300px;
+    
+}
+
+.player::after {
+    content: "";
+    display: block;
+    padding-top: 60%;
 }
 
 #your-choice {
@@ -59,22 +65,28 @@ header {
 .computer {
     background-color: rgb(157, 251, 251);
     width: 24%;
-    height: 300px;
+    
+}
+.computer::after {
+    content: "";
+    display: block;
+    padding-top: 60%;
 }
 #opponent-choice {
     width: 80%; 
 }
 
 
-#image-container {
+.image-container {
     background-color: white;    
-    width: 34%;
-    height: 300px;
+    width: 30%;
+    height: 250px;
     padding-bottom: 30px;
     
 }
 
-#image-container img {
+
+.image-container img {
     max-width: 100%;
     max-height: 100%;
 }
@@ -124,5 +136,10 @@ footer h4 {
 footer p {
     margin: -1px;
 }
+
+
+
+
+
 
 
