--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,13 +15,15 @@ body {
 /* header and footer */
 
 header {
-    text-align: center;
-    height: 50px;
-    margin-bottom: 20px;
-    letter-spacing: 10px;
+    position: sticky;
+    text-align: center;    
+    letter-spacing: 5px;
+    font-size: 1vw;
 }
 
-
+h3 {
+    font-size: 2vw;
+}
 
 .game-area {
     width: 75%;
@@ -49,11 +51,10 @@ header {
     width: 24%;
     
 }
-
 .player::after {
     content: "";
     display: block;
-    padding-top: 60%;
+    padding-top: 30%;
 }
 
 #your-choice {
@@ -70,8 +71,9 @@ header {
 .computer::after {
     content: "";
     display: block;
-    padding-top: 60%;
+    padding-top: 30%;
 }
+
 #opponent-choice {
     width: 80%; 
 }
@@ -79,40 +81,43 @@ header {
 
 .image-container {
     background-color: white;    
-    width: 30%;
-    height: 250px;
-    padding-bottom: 30px;
-    
+    width: 30%;  
+}
+.image-container::after {
+    content: "";
+    display: block;
+    padding-top: 30%;
 }
 
 
 .image-container img {
-    max-width: 100%;
-    max-height: 100%;
+    
+    max-width: 20vw;
+    max-height: 20vw;
+    padding-top: 50px;
 }
 
-#makechoice-heading p {
-    margin-top: 20px;
-}
 
 #makeChoice {
     margin-top: -25px;
-    font-size:xx-large ;
+    font-size: 3vw;;
     letter-spacing: 5px;
 }
 
+
 #choices {    
     background-color: rgb(221, 197, 244);
-    width: 85%;
+    width: 85%;    
     margin-left: auto;
     margin-right: auto;
 }
 
 #choices img {
-    width: 80px;
-    height: 80px;
-    margin-left: 20px;
-    margin-right: 20px;
+    width: 6vw;
+    height: 6vw;
+    margin-left: 2vw;
+    margin-right: 2vw;
+    padding-top: 5px;
 }
 
 footer {
@@ -136,7 +141,6 @@ footer h4 {
 footer p {
     margin: -1px;
 }
-
 
 
 
