--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,88 +18,107 @@ header {
     position: sticky;
     text-align: center;    
     letter-spacing: 5px;
-    font-size: 1vw;
-}
-
-h3 {
     font-size: 2vw;
 }
 
+h3 {
+    font-size: 3vw;
+}
+
 .game-area {
-    width: 75%;
-    margin-left: auto;
-    margin-right: auto;
+    width: 100%;
     margin-top: -25px; 
     text-align: center;
+    box-sizing: border-box;
 }
 
 
-#flex-container {
-    display: flex;
+#flex-container { 
+    width: 90%; 
+    display:flex;   
     align-items: center;
     align-content: center;
     justify-content: center;
+    margin: 0 auto;
+    box-sizing: border-box;
 }
 
-#flex-container div {
-    margin: 10px;
-}
+/* #flex-container div {
+    height: 400px;
+} */
 
 .player {
     background-color: rgb(193, 250, 188);
     float: left;
-    width: 24%;
+    width: 30%;
+    margin: 0;
+    padding: 0;
     
 }
+.player img {
+    width: 60%;
+    margin: 0 auto;
+    padding: 0;
+}
+
+.image-container {
+    background-color: white;    
+    width: 30%;  
+    margin: auto;
+    padding: 0;
+}
+
+.image-container img {
+    
+    width: 100%;
+    margin: 30px auto;
+}
+
+.computer {
+    background-color: rgb(157, 251, 251);
+    width: 30%;
+    float: right;
+    
+}
+
+.computer img {
+    width: 60%;
+    margin: 0 auto;
+    padding: 0;
+}
+
 .player::after {
     content: "";
     display: block;
     padding-top: 30%;
+    margin: 0;
+    padding: 0;
 }
 
 #your-choice {
     width: 80%;
 }
 
-
-
-.computer {
-    background-color: rgb(157, 251, 251);
-    width: 24%;
-    
-}
 .computer::after {
     content: "";
     display: block;
     padding-top: 30%;
+    margin: 0;
+    padding: 0;
 }
 
 #opponent-choice {
     width: 80%; 
 }
 
-
-.image-container {
-    background-color: white;    
-    width: 30%;  
-}
 .image-container::after {
     content: "";
     display: block;
     padding-top: 30%;
 }
 
-
-.image-container img {
-    
-    max-width: 20vw;
-    max-height: 20vw;
-    padding-top: 50px;
-}
-
-
 #makeChoice {
-    margin-top: -25px;
+    
     font-size: 3vw;;
     letter-spacing: 5px;
 }
@@ -107,22 +126,26 @@ h3 {
 
 #choices {    
     background-color: rgb(221, 197, 244);
-    width: 85%;    
-    margin-left: auto;
-    margin-right: auto;
+    width: 90%;    
+    margin: 10px auto;
+    
 }
 
 #choices img {
-    width: 6vw;
-    height: 6vw;
+    width: 9vw;
+    height: 9vw;
     margin-left: 2vw;
     margin-right: 2vw;
     padding-top: 5px;
 }
 
+.img-sm {
+    display: none;
+}
+
 footer {
     position: relative;
-    width: 64%;
+    width: 90%;
     margin-left: auto;
     margin-right: auto;
     top: 20px;    
@@ -140,6 +163,66 @@ footer h4 {
 }
 footer p {
     margin: -1px;
+}
+
+/* For small screen sizes 800px and down */
+@media screen and (max-width: 900px) 
+ { header {
+    position: static;
+    margin: 20px;
+    
+   }
+    .game-area{
+    width: 100%;
+    margin: 20px auto;
+    box-sizing: border-box
+   }
+   .image-container {
+    display: none;
+   }
+   #flex-container {
+    width: 75%;
+    display:inline-block;
+    box-sizing: border-box;
+   }
+   .player {
+    width: 40%;
+    float: left;
+    margin: 0;
+   }
+   .computer {
+    width: 40%;
+    float: right;
+    margin: 0;
+   }
+   #makeChoice {
+    width: 80%;
+    margin: 10px auto;
+    font-size: 3vw;;
+    letter-spacing: 5px;
+    }
+    #choices {
+    width: 75%;
+    
+    box-sizing: border-box;
+    }
+    .img-sm {
+        width: 60%;
+        margin: 0 auto;
+        display: block;
+    }
+    .image-container-sm {
+        width: 50%;
+        margin: 0 auto;
+    }
+    .img-sm img {
+        width: 50vw;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        width: 75%;
+    }
 }
 
 
