--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,6 @@ h3 {
 
 .game-area {
     width: 100%;
-    /* margin-top: -25px;  */
     text-align: center;
     box-sizing: border-box;
 }
@@ -35,17 +34,12 @@ h3 {
 
 #flex-container { 
     width: 70%; 
-    display: flex;   
-    /* align-items: center; */
-    /* align-content: center; */
+    display: flex;
+    align-content: stretch;
     justify-content: center;
     margin: 0 auto;
     box-sizing: border-box;
 }
-
-/* #flex-container div {
-    height: 400px;
-} */
 
 .player {
     background-color: rgb(193, 250, 188);
@@ -71,23 +65,19 @@ h3 {
     align-content: center;
 }
 
-.empty-div {
-    width: 100%;
-    height: 40px;
-    background-color: white;
-}
-
 .image-container img {
     
     width: 90%;
     margin: 0 auto;
+    padding: 0;
 }
 
 .computer {
     background-color: rgb(157, 251, 251);
     width: 30%;
     float: right;
-    
+    margin: 0;
+    padding: 0;
 }
 
 .computer img {
@@ -104,9 +94,6 @@ h3 {
     padding: 0;
 }
 
-#your-choice {
-    width: 80%;
-}
 
 .computer::after {
     content: "";
@@ -116,21 +103,11 @@ h3 {
     padding: 0;
 }
 
-#opponent-choice {
-    width: 80%; 
-}
-
-.image-container::after {
-    content: "";
-    display: block;
-    padding-top: 30%;
-}
-
 #makeChoice {
     
     font-size: 2vw;;
     letter-spacing: 5px;
-    margin-top: -25px;
+    
 }
 
 
@@ -156,30 +133,24 @@ h3 {
 footer {
     position: relative;
     width: 70%;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
+    padding: 10px;
     top: 20px;    
     box-sizing: border-box;
     min-width: 80px;
     text-align: center;
     color: rgb(145, 5, 5);
     background-color: bisque;
-    padding-top: 3px;
-    padding-bottom: 4px;
+    
 }
 
-footer h4 {
-    margin: -1px;
-}
-footer p {
-    margin: -1px;
-}
 
-/* For small screen sizes 800px and down */
+/* For small screen sizes 900px and down */
 @media screen and (max-width: 900px) 
  { header {
     position: static;
     margin: 20px;
+    font-size: medium;
     
    }
     .game-area{
@@ -235,6 +206,29 @@ footer p {
     }
 }
 
+/* For small screen sizes 500px and down */
+@media screen and (max-width: 500px) {
+    .player {
+        width: 50%;
+        float: left;
+        margin: 0;
+       }
+       .computer {
+        width: 50%;
+        float: right;
+        margin: 0;
+       }
+    h3 {
+        font-size: smaller;
+    }
+    #choices img {
+        width: 80px;
+        height: 80px;
+        margin-left: 2vw;
+        margin-right: 2vw;
+        padding-top: 5px;
+    }
+}
 
 
 
